objects/Business__c.object
<CustomObject>
    <fields>
        <fullName>All_students_count__c</fullName>
        <label>All students count</label>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Total_Fee_yet_to_come__c -  Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>India_Students_Count__c</fullName>
        <label>India Students Count</label>
        <summaryFilterItems>
            <field>student__c.Country__c</field>
            <operation>equals</operation>
            <value>IND</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>student__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>USA student Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Amount__c</fullName>
        <label>Max Amount</label>
        <summarizedField>student__c.howmuch__c</summarizedField>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_amount__c</fullName>
        <label>Min amount</label>
        <summarizedField>student__c.howmuch__c</summarizedField>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Modules__c</fullName>
        <label>Modules</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>SAAS Admin</fullName>
                </value>
                <value>
                    <fullName>SAAS DEV</fullName>
                </value>
                <value>
                    <fullName>AWS Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_list__c</fullName>
        <label>Staff list</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mohan</fullName>
                </value>
                <value>
                    <fullName>John</fullName>
                </value>
                <value>
                    <fullName>Balu</fullName>
                </value>
                <value>
                    <fullName>Ravi</fullName>
                </value>
                <value>
                    <fullName>Ram</fullName>
                </value>
                <value>
                    <fullName>Gopi</fullName>
                </value>
                <value>
                    <fullName>Guna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fee_yet_to_come__c</fullName>
        <label>Total Fee yet to come</label>
        <summarizedField>student__c.Total_course_fees__c</summarizedField>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <summarizedField>student__c.howmuch__c</summarizedField>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UK_student_Count__c</fullName>
        <label>UK student Count</label>
        <summaryFilterItems>
            <field>student__c.Country__c</field>
            <operation>equals</operation>
            <value>UK</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>student__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>UK Recordtype Layout</value>
        </summaryFilterItems>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>USA_Students_Count_del__c</fullName>
        <label>USA Students Count</label>
        <summaryFilterItems>
            <field>student__c.Country__c</field>
            <operation>equals</operation>
            <value>IND, USA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>student__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>USA student Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>stud__c</fullName>
        <label>stud</label>
        <summaryForeignKey>student__c.Business__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Business</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Modules__c</columns>
        <columns>Staff_list__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hyd_territiory_mgr_Approval_queue_Business</fullName>
        <filterScope>Queue</filterScope>
        <label>Hyd territiory mgr Approval queue</label>
        <queue>Hyd_territiory_mgr_Approval_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>USA_terri_Business</fullName>
        <filterScope>Queue</filterScope>
        <label>USA terri</label>
        <queue>USA_terri</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>business_queue_Business</fullName>
        <filterScope>Queue</filterScope>
        <label>business queue</label>
        <queue>business_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Businesses</pluralLabel>
    <recordTypes>
        <fullName>business_country</fullName>
        <active>true</active>
        <label>business country</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>One_to_One_training</fullName>
        <active>false</active>
        <errorConditionFormula>IF( All_students_count__c &gt;1, true, false)</errorConditionFormula>
        <errorMessage>Show the Error message after entering the new record</errorMessage>
    </validationRules>
</CustomObject>